# PixelGameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: c-cpp.yml
include/: Collision.hpp  Engine.hpp  Game.hpp  Input.hpp  Physics.hpp  Renderer.hpp
src/: Collision.cpp  Engine.cpp  Game.cpp  Input.cpp  Physics.cpp  Renderer.cpp
